--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ requests
 tree-sitter>=0.22.0
 tree-sitter-python
 tree-sitter-typescript
-pydantic
+pydantic>=2.0.0
+pydantic-settings>=2.0.0
 python-dotenv
