docs: Add comprehensive documentation for AI tools, API, architecture, and development, update README with a visual example, and modify gitignore to track new doc files.

--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ repos/
 # Neo4j
 *.db
 
-AI_TOOLS.md
-ARCHITECTURE.md
-DEVELOPER_GUIDE.md
-API_REFERENCE.md
+# AI_TOOLS.md
+# ARCHITECTURE.md
+# DEVELOPER_GUIDE.md
+# API_REFERENCE.md
