feat: Add `sample` variable to `.env.example`.

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ NEO4J_PASSWORD=your_neo4j_password
 
 # Groq API Configuration
 GROQ_API_KEY=your_groq_api_key_here
+sample = ""
 
 # Worker URLs
 PYTHON_WORKER_URL=http://localhost:8001
